Improved (ie. fixed) spacing

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ abbr {
 
 h1 {
     border-bottom: 1px solid #EEE;
+    margin-bottom: 30px;
 }
 
 div.topnav {
